Updated with new recipes, Room for more

--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
 
     <body>
         <h1>Odin Recipes</h1>
-        <a href="recipes/churros.html">Churro Recipe</a>
-        <a href="recipes/crispy-creamy-donuts.html">Crispy Creamy Donuts Recipe</a>
-        <a href="recipes/mochi-donuts.html">Mochi Donuts Recipe</a>
+
+        <a href="recipes/Churros/churros.html">Churro Recipe</a>
+        <a href="recipes/Crispy Donuts/crispy-donuts.html">Crispy Creamy Donuts Recipe</a>
+        <a href="recipes/Mochi Donuts/mochi-donuts.html">Mochi Donuts Recipe</a>
     </body>
 </html>
