--- a/recipes/Churros/churros.html
+++ b/recipes/Churros/churros.html
@@ -7,5 +7,36 @@
 
 <body>
     <h1>Churros</h1>
+
     <img src="churros.jpg"alt="churros">
+
+    <h3>Discription</h3>
+    <p><h4>What Is a Churro?</h4></p>
+    <p>A churro is a cinnamon- and sugar-topped fried pastry dough stick with Spanish and Portuguese origins. 
+        Churros are similar to doughnuts, but they have ridges because they are piped out of a pastry bag. 
+        Because they are fried instead of baked, churros have a fluffy and tender interior with a satisfyingly crispy exterior.</p>
+
+    <p><h4>Ingrediants:</h4></p>
+    <ul style="list-style-type:circle;">
+        <li><strong>Water</strong>: This recipe for churros starts with a cup of water.</li>
+        <li><strong>Sugar</strong>: White sugar goes into the churro dough and into the cinnamon-sugar topping.</li>
+        <li><strong>Salt</strong>: A pinch of salt enhances the flavors of the other ingredients.</li>
+        <li><strong>Oil</strong>: You'll need vegetable oil for the dough and to fry the churros.</li>
+        <li><strong>Flour</strong>: All-purpose flour gives the churro dough structure.</li>
+        <li><strong>Cinnamon</strong>: The fried churros are rolled in a cinnamon-sugar mixture before serving.
+
+        </li>
+    </ul>
+
+    <p><h4>How to Make Churros Step-by-Step:</h4></p>
+    <p>Here's a very brief overview of what you can expect when you make churros at home:</p>
+    <ol style="list-style-type:disk;">
+        <li> Boil water, sugar, salt, and vegetable oil. Remove from the heat, then stir in flour.</li>
+        <li> Transfer the dough to a pastry bag and pipe into strips.</li>
+        <li> Fry the strips in hot oil until they're golden.</li>
+        <li> Drain the churros, then roll in cinnamon-sugar.</li>
+    </ol>    
+
+        <strong>Tip</strong>: Keep the oil temperature consistently between 350 and 375 F&deg; (175 and 190 C&deg;) as you fry. 
+        If it gets too hot, turn off the heat and let the temperature drop down to that range.</p>
 </body>
