--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
 
         <a href="recipes/Churros/churros.html">Churro Recipe</a>
         <a href="recipes/Crispy Donuts/crispy-donuts.html">Crispy Creamy Donuts Recipe</a>
-        <a href="recipes/Mochi Donuts/mochi-donuts.html">Mochi Donuts Recipe</a>
+        <a href="recipes/Mochi Donuts/mochi-donuts.html">Mochi Donut Recipe</a>
     </body>
 </html>
